batch-mode/ai-json-template-derive/tests/trybuild/fail_missing_serde.stderr
error[E0277]: the trait bound `NoSerde: Serialize` is not satisfied
  --> tests/trybuild/fail_missing_serde.rs:10:10
   |
10 | #[derive(SaveLoad,Debug,Clone,AiJsonTemplate)]
   |          ^^^^^^^^ the trait `Serialize` is not implemented for `NoSerde`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `NoSerde` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `SaveLoad` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
4  + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `for<'a> NoSerde: Deserialize<'a>` is not satisfied
  --> tests/trybuild/fail_missing_serde.rs:11:8
   |
11 | struct NoSerde {
   |        ^^^^^^^ the trait `for<'a> Deserialize<'a>` is not implemented for `NoSerde`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `NoSerde` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
note: required by a bound in `ai_json_template::AiJsonTemplate`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplate
   |           -------------- required by a bound in this trait
...
   | + for<'a> Deserialize<'a>
   |   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplate`

error[E0277]: the trait bound `NoSerde: Serialize` is not satisfied
  --> tests/trybuild/fail_missing_serde.rs:11:8
   |
11 | struct NoSerde {
   |        ^^^^^^^ the trait `Serialize` is not implemented for `NoSerde`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `NoSerde` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `ai_json_template::AiJsonTemplate`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplate
   |           -------------- required by a bound in this trait
...
   | + Serialize
   |   ^^^^^^^^^ required by this bound in `AiJsonTemplate`
